# PGM_URDT

./: README.md
ur_digital_twin/: CMakeLists.txt  package.xml  setup.py  setup_dependencies.sh
ur_digital_twin/launch/: digital_twin.launch.py
ur_digital_twin/msg/: FaultDetection.msg  HealthStatus.msg  ParameterState.msg
ur_digital_twin/ur_digital_twin/: dbn_model.py  digital_twin_base.py  digital_twin_node.py  inference_algorithms.py  parameter_evaluation.py  web_dashboard.py
